--- a/ASL.Frontend/src/index.css
+++ b/ASL.Frontend/src/index.css
@@ -1,3 +1,17 @@
+/* Add to top of index.css */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: #121212;
+}
+
 /* Reset some basic elements */
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
